{
  "version": 4,
  "terraform_version": "1.5.4",
  "serial": 11,
  "lineage": "7eb41565-4eeb-c787-b119-2e0f68e9b0dc",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "fazle-EC2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08a52ddb321b32a8c",
            "arn": "arn:aws:ec2:us-east-1:430704357939:instance/i-0a048946462136370",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a048946462136370",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-070740c21ab30d41b",
            "private_dns": "ip-192-168-56-13.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.56.13",
            "public_ip": "35.171.203.129",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0b84f55f1f2b5c4e0",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02211075993643188",
            "tags": {
              "Name": "Fazle-EC2"
            },
            "tags_all": {
              "Name": "Fazle-EC2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": true,
            "vpc_security_group_ids": [
              "sg-0012e15b6cb780814"
            ]
          },
          "dependencies": [
            "aws_security_group.fazle_SG_EC2",
            "aws_subnet.fazle-subnet",
            "aws_vpc.fazle-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "fazle_IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:430704357939:internet-gateway/igw-0edda6a4cf0069617",
            "id": "igw-0edda6a4cf0069617",
            "owner_id": "430704357939",
            "vpc_id": "vpc-01c396d3a38601d0e"
          },
          "dependencies": [
            "aws_vpc.fazle-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Public_RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:430704357939:route-table/rtb-0e58aed0ec771f692",
            "id": "rtb-0e58aed0ec771f692",
            "owner_id": "430704357939",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0edda6a4cf0069617",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-01c396d3a38601d0e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.fazle_IGW",
            "aws_vpc.fazle-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PRT_Associate",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c3548d4b11378a9a",
            "route_table_id": "rtb-0e58aed0ec771f692",
            "subnet_id": "subnet-02211075993643188"
          },
          "dependencies": [
            "aws_internet_gateway.fazle_IGW",
            "aws_route_table.Public_RT",
            "aws_subnet.fazle-subnet",
            "aws_vpc.fazle-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "fazle_SG_EC2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:430704357939:security-group/sg-0012e15b6cb780814",
            "description": "Security Group for my EC2 instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0012e15b6cb780814",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "fazle_SG_EC2",
            "name_prefix": "",
            "owner_id": "430704357939",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "fazle_SG_EC2"
            },
            "tags_all": {
              "Name": "fazle_SG_EC2"
            },
            "timeouts": null,
            "vpc_id": "vpc-01c396d3a38601d0e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.fazle-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "fazle-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:430704357939:subnet/subnet-02211075993643188",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az1",
            "cidr_block": "192.168.56.0/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02211075993643188",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "430704357939",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-01c396d3a38601d0e"
          },
          "dependencies": [
            "aws_vpc.fazle-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "fazle-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:430704357939:vpc/vpc-01c396d3a38601d0e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.56.0/28",
            "default_network_acl_id": "acl-0b01b66fd285c0f1d",
            "default_route_table_id": "rtb-0ab98588493e4dca5",
            "default_security_group_id": "sg-087410a8a71319649",
            "dhcp_options_id": "dopt-0b9ceb20cd0988fd9",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01c396d3a38601d0e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ab98588493e4dca5",
            "owner_id": "430704357939"
          }
        }
      ]
    }
  ]
}